# docs/swagger.json
@@ -33,7 +33,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/orders.OrderRequest"
+                            "$ref": "#/definitions/orders.OrderRequestSwag"
                         }
                     }
                 ],
@@ -125,7 +125,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/orders.OrderRequest"
+                            "$ref": "#/definitions/orders.OrderRequestSwag"
                         }
                     }
                 ],
@@ -289,22 +289,18 @@
         }
     },
     "definitions": {
-        "orders.OrderDetail": {
+        "orders.OrderDetailSwag": {
             "type": "object",
             "properties": {
                 "item": {
                     "type": "string"
-                },
-                "order_id": {
-                    "description": "gorm.Model",
-                    "type": "integer"
                 },
                 "qty": {
                     "type": "integer"
                 }
             }
         },
-        "orders.OrderRequest": {
+        "orders.OrderRequestSwag": {
             "type": "object",
             "properties": {
                 "customer": {
@@ -322,7 +318,7 @@
                 "order_details": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/orders.OrderDetail"
+                        "$ref": "#/definitions/orders.OrderDetailSwag"
                     }
                 },
                 "status": {
